# AINPP-PB-LATAM

./: .coverage  .gitignore  LICENSE  README.md  coverage.json  main.py  mkdocs.yml  pyproject.toml  requirements.txt  save_dataset.py  tmp_check_imports.py
.github/agents/: ux-design-expert.agent.md
.github/workflows/: ci.yml  docs.yml  release.yml
conf/: config.yaml
conf/dataset/: ainpp_pb_latam_dataset.yaml  default.yaml  gsmap.yaml
conf/discriminator/: patchgan.yaml
conf/evaluation/: default.yaml
conf/inference/: default.yaml
conf/loss/: dice.yaml  focal.yaml  huber.yaml  hybrid_mse_ssim.yaml  logcosh.yaml  mse_ssim.yaml  perceptual_mae.yaml  sharpness.yaml  sota.yaml  spectral.yaml  ssim.yaml  torrential.yaml  weighted_mse.yaml
conf/model/: unet.yaml
conf/model/afno/: direct.yaml
conf/model/convlstm/: direct.yaml
conf/model/graph/: graph.yaml
conf/model/inceptionv4/: direct.yaml
conf/model/resnet50/: direct.yaml
conf/model/unet/: autoregressive.yaml  direct.yaml
conf/model/xception/: direct.yaml
conf/preprocessing/: default.yaml
conf/preprocessing/region/: amazon_basin.yaml  latin_america.yaml  south_america.yaml
conf/training/: default.yaml  gan.yaml
conf/visualization/: default.yaml
docs/: api.md  architecture.md  index.md  installation.md  publishing.md  training.md  usage.md
docs/api/: datasets.md  evaluation.md  models.md  preprocessing.md  visualization.md
docs/stories/STORY-001/: story.md
docs/stories/STORY-001/plan/: implementation.yaml
docs/stories/STORY-001/spec/: spec.md
docs/stories/STORY-002/: story.md
docs/stories/STORY-003/: story.md
docs/stories/STORY-004/: story.md
docs/stories/STORY-005/: story.md
docs/stories/STORY-006/: story.md
docs/stories/STORY-007/: story.md
docs/stories/STORY-008/: story.md
scripts/: check_all.sh  enforce_coverage.py  evaluate.py  generate_all_dummy_figures.py  inspect_zarr.py  preprocess.py  run_pipeline_all.sh  run_pipeline_unet.sh  test_afno.py  test_all_models.sh  train.py  train_afno.py  train_flow.py  train_gan.py  train_subset.sh  view.py  visualization.py
src/: __init__.py  dataset.py  distributed.py  engine.py  engine_gan.py  losses.py  trainer.py  utils.py
src/ainpp/: engine.py  engine_gan.py  evaluation.py  utils.py
src/ainpp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ainpp/aggregation/: __init__.py
src/ainpp/ainpp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ainpp/datasets/: gsmap.py
src/ainpp/evaluation/: evaluator.py  metrics.py
src/ainpp/inference/: __init__.py  inferencer.py
src/ainpp/layers/: blocks.py
src/ainpp/metrics/categorical/: __init__.py
src/ainpp/metrics/object_based/: __init__.py
src/ainpp/metrics/probabilistic/: __init__.py
src/ainpp/metrics/utils/: __init__.py
src/ainpp/models/: __init__.py
src/ainpp/models/afno/: forecaster.py
src/ainpp/models/convlstm/: backbone.py  forecaster.py
src/ainpp/models/graph/: graph.py
src/ainpp/models/inceptionv4/: forecaster.py
src/ainpp/models/resnet50/: forecaster.py
src/ainpp/models/unet/: backbone.py  forecaster.py
src/ainpp/models/xception/: forecaster.py
src/ainpp/preprocessing/: pipeline.py
src/ainpp/visualization/: __init__.py  animations.py  generate_figures.py  plot_advanced.py  runner.py  samples.py  style.py
src/ainpp_pb_latam/: __init__.py  distributed.py  engine.py  engine_gan.py  losses.py  utils.py
src/ainpp_pb_latam/_utils/: standardization.py
src/ainpp_pb_latam/aggregation/: __init__.py
src/ainpp_pb_latam/datasets/: __init__.py  gsmap.py
src/ainpp_pb_latam/evaluation/: evaluator.py
src/ainpp_pb_latam/inference/: __init__.py  inferencer.py
src/ainpp_pb_latam/layers/: blocks.py
src/ainpp_pb_latam/metrics/: __init__.py
src/ainpp_pb_latam/metrics/categorical/: __init__.py  spatial.py
src/ainpp_pb_latam/metrics/consistency/: __init__.py
src/ainpp_pb_latam/metrics/continuous/: __init__.py
src/ainpp_pb_latam/metrics/object_based/: __init__.py
src/ainpp_pb_latam/metrics/probabilistic/: __init__.py
src/ainpp_pb_latam/metrics/sharpness/: __init__.py
src/ainpp_pb_latam/models/: __init__.py
src/ainpp_pb_latam/models/afno/: blocks.py  forecaster.py
src/ainpp_pb_latam/models/convlstm/: backbone.py  blocks.py  forecaster.py
src/ainpp_pb_latam/models/gan/: discriminator.py
src/ainpp_pb_latam/models/inceptionv4/: forecaster.py
src/ainpp_pb_latam/models/resnet50/: forecaster.py
src/ainpp_pb_latam/models/unet/: __init__.py  backbone.py  blocks.py  forecaster.py
src/ainpp_pb_latam/models/xception/: __init__.py  blocks.py  forecaster.py
src/ainpp_pb_latam/visualization/: __init__.py  animations.py  generate_figures.py  plot_advanced.py  plot_maps.py  plot_metrics.py  runner.py  samples.py  style.py
src/datasets/: __init__.py  gsmap.py
src/evaluation/: categorical_metrics.py  continuous_metrics.py  evaluator.py  spatial_metrics.py
src/models/: __init__.py  factory.py  unet.bkp.py  unet.py
src/models/afno/: __init__.py  blocks.py  forecaster.py
src/models/convlstm/: __init__.py  backbone.py  blocks.py  forecaster.py
src/models/gan/: discriminator.py
src/models/graph/: __init__.py
src/models/inceptionv4/: forecaster.py
src/models/resnet50/: forecaster.py
src/models/unet/: __init__.py  backbone.py  blocks.py  forecaster.py
src/models/xception/: forecaster.py
src/preprocessing/: processor.py
src/utils/: standardization.py
src/visualization/: plot_metrics.py
tests/: conftest.py  run_tests.sh  test_categorical_metrics.py  test_continuous_metrics.py  test_dataset.py  test_dataset_subset.py  test_datasets.py  test_evaluation.py  test_evaluation_pipeline.py  test_losses.py  test_metrics.py  test_model_config.py  test_models.py  test_newdataset.py  test_preprocessing_module.py  test_spatial_metrics.py  test_training.py  test_utils.py  test_visualization.py  verify_pipeline.py
tests/dummy_env/dummy_data.zarr/test/gsmap_mvk/: zarr.json
tests/dummy_env/dummy_data.zarr/test/gsmap_mvk/c/0/0/: 0
(+1 files in other folders)
