[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ainpp"
version = "0.1.0"
description = "Nowcasting Benchmark for Latin America"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "torch",
    "torchvision",
    "zarr",
    "hydra-core",
    "mlflow",
    "pandas",
    "tqdm",
    "scikit-learn",
    "matplotlib",
    "scipy",
    "xarray",
    "dask",
    "timm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "black",
    "isort",
    "mypy",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings>=0.24",
    "mkdocstrings-python>=1.8",
    "mkdocs-gen-files>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/ainpp --cov-report=term-missing --cov-report=json:coverage.json --cov-branch"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
branch = true
source = ["src/ainpp"]

[tool.coverage.report]
fail_under = 10
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true
show_error_codes = true
exclude = ["tests/test_output"]
